# OpenWorld

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chat.rs  config.rs  crypto.rs  lib.rs  main.rs  ollama.rs  storage.rs
src/components/: Layout.css  Layout.tsx
src/pages/: ChatPage.css  ChatPage.tsx  ModelsPage.css  ModelsPage.tsx  PluginsPage.css  PluginsPage.tsx  SettingsPage.css  SettingsPage.tsx  SetupWizard.css  SetupWizard.tsx
src/stores/: chatStore.ts  modelStore.ts  settingsStore.ts
