[package]
name = "openworld"
version = "0.1.0"
description = "OpenWorld - Your AI, Your Machine"
authors = ["you"]
edition = "2021"

[lib]
name = "openworld_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
ring = "0.17"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
rand = "0.8"
futures-util = "0.3"
lazy_static = "1.5"
